--- a/math4compgraph/bookshelf.html
+++ b/math4compgraph/bookshelf.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Transformation - Mathematics for Computer Graphics</title>
+        <title>กลับสู่ชั้นหนังสือ - Mathematics for Computer Graphics</title>
 
 
         <!-- Custom HTML head -->
@@ -12,27 +12,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
-        <link rel="icon" href="../favicon.svg">
-        <link rel="shortcut icon" href="../favicon.png">
-        <link rel="stylesheet" href="../css/variables.css">
-        <link rel="stylesheet" href="../css/general.css">
-        <link rel="stylesheet" href="../css/chrome.css">
-        <link rel="stylesheet" href="../css/print.css" media="print">
+        <link rel="icon" href="favicon.svg">
+        <link rel="shortcut icon" href="favicon.png">
+        <link rel="stylesheet" href="css/variables.css">
+        <link rel="stylesheet" href="css/general.css">
+        <link rel="stylesheet" href="css/chrome.css">
+        <link rel="stylesheet" href="css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="../fonts/fonts.css">
+        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../highlight.css">
-        <link rel="stylesheet" href="../tomorrow-night.css">
-        <link rel="stylesheet" href="../ayu-highlight.css">
+        <link rel="stylesheet" href="highlight.css">
+        <link rel="stylesheet" href="tomorrow-night.css">
+        <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="../css/watermark.css">
-        <link rel="stylesheet" href="../css/openmoji-color-awesome.css">
-        <link rel="stylesheet" href="../css/openmoji-black-awesome.css">
-        <link rel="stylesheet" href="../css/modal.css">
+        <link rel="stylesheet" href="css/watermark.css">
+        <link rel="stylesheet" href="css/openmoji-color-awesome.css">
+        <link rel="stylesheet" href="css/openmoji-black-awesome.css">
+        <link rel="stylesheet" href="css/modal.css">
 
         <!-- MathJax -->
         <script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
@@ -41,7 +41,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "../";
+            var path_to_root = "";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "rust";
         </script>
 
@@ -93,7 +93,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item "><a href="../cover.html"><strong aria-hidden="true">1.</strong> Cover</a></li><li class="chapter-item "><a href="../number/intro.html"><strong aria-hidden="true">2.</strong> Number</a></li><li class="chapter-item "><a href="../algebra/intro.html"><strong aria-hidden="true">3.</strong> Algebra</a></li><li class="chapter-item "><a href="../trigono/intro.html"><strong aria-hidden="true">4.</strong> Trigonometry</a></li><li class="chapter-item "><a href="../coordinate/intro.html"><strong aria-hidden="true">5.</strong> Coordinate System</a></li><li class="chapter-item "><a href="../vector/intro_vector.html"><strong aria-hidden="true">6.</strong> Vector</a></li><li class="chapter-item "><a href="../matrix/intro_matrix.html"><strong aria-hidden="true">7.</strong> Matrix</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../matrix/matrix_types.html"><strong aria-hidden="true">7.1.</strong> Types of Matrix</a></li><li class="chapter-item "><a href="../matrix/transpose_matrix.html"><strong aria-hidden="true">7.2.</strong> Transpose of Matrix</a></li><li class="chapter-item "><a href="../matrix/matrix_algebra.html"><strong aria-hidden="true">7.3.</strong> Matrix Algebra</a></li><li class="chapter-item "><a href="../matrix/matrix_inverse.html"><strong aria-hidden="true">7.4.</strong> Inverse of Matrix</a></li></ol></li><li class="chapter-item "><a href="../determinant/intro.html"><strong aria-hidden="true">8.</strong> Determinant</a></li><li class="chapter-item expanded "><a href="../transformation/intro.html" class="active"><strong aria-hidden="true">9.</strong> Transformation</a></li><li class="chapter-item "><a href="../polynomial/intro_polynomial.html"><strong aria-hidden="true">10.</strong> Polynomial</a></li><li class="chapter-item "><a href="../interpolation/intro_interpolation.html"><strong aria-hidden="true">11.</strong> Interpolation</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../interpolation/linear_interpo.html"><strong aria-hidden="true">11.1.</strong> Linear Interpolate</a></li><li class="chapter-item "><a href="../interpolation/non-linear_interpo.html"><strong aria-hidden="true">11.2.</strong> Non-linear Interpolate</a></li><li class="chapter-item "><a href="../interpolation/knot_vector.html"><strong aria-hidden="true">11.3.</strong> Knot vector</a></li></ol></li><li class="chapter-item "><a href="../devided_diff/intro_divide_diff.html"><strong aria-hidden="true">12.</strong> Divided Differences</a></li><li class="chapter-item "><a href="../bookshelf.html"><strong aria-hidden="true">13.</strong> กลับสู่ชั้นหนังสือ</a></li></ol>
+                <ol class="chapter"><li class="chapter-item "><a href="cover.html"><strong aria-hidden="true">1.</strong> Cover</a></li><li class="chapter-item "><a href="number/intro.html"><strong aria-hidden="true">2.</strong> Number</a></li><li class="chapter-item "><a href="algebra/intro.html"><strong aria-hidden="true">3.</strong> Algebra</a></li><li class="chapter-item "><a href="trigono/intro.html"><strong aria-hidden="true">4.</strong> Trigonometry</a></li><li class="chapter-item "><a href="coordinate/intro.html"><strong aria-hidden="true">5.</strong> Coordinate System</a></li><li class="chapter-item "><a href="vector/intro_vector.html"><strong aria-hidden="true">6.</strong> Vector</a></li><li class="chapter-item "><a href="matrix/intro_matrix.html"><strong aria-hidden="true">7.</strong> Matrix</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="matrix/matrix_types.html"><strong aria-hidden="true">7.1.</strong> Types of Matrix</a></li><li class="chapter-item "><a href="matrix/transpose_matrix.html"><strong aria-hidden="true">7.2.</strong> Transpose of Matrix</a></li><li class="chapter-item "><a href="matrix/matrix_algebra.html"><strong aria-hidden="true">7.3.</strong> Matrix Algebra</a></li><li class="chapter-item "><a href="matrix/matrix_inverse.html"><strong aria-hidden="true">7.4.</strong> Inverse of Matrix</a></li></ol></li><li class="chapter-item "><a href="determinant/intro.html"><strong aria-hidden="true">8.</strong> Determinant</a></li><li class="chapter-item "><a href="transformation/intro.html"><strong aria-hidden="true">9.</strong> Transformation</a></li><li class="chapter-item "><a href="polynomial/intro_polynomial.html"><strong aria-hidden="true">10.</strong> Polynomial</a></li><li class="chapter-item "><a href="interpolation/intro_interpolation.html"><strong aria-hidden="true">11.</strong> Interpolation</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="interpolation/linear_interpo.html"><strong aria-hidden="true">11.1.</strong> Linear Interpolate</a></li><li class="chapter-item "><a href="interpolation/non-linear_interpo.html"><strong aria-hidden="true">11.2.</strong> Non-linear Interpolate</a></li><li class="chapter-item "><a href="interpolation/knot_vector.html"><strong aria-hidden="true">11.3.</strong> Knot vector</a></li></ol></li><li class="chapter-item "><a href="devided_diff/intro_divide_diff.html"><strong aria-hidden="true">12.</strong> Divided Differences</a></li><li class="chapter-item expanded "><a href="bookshelf.html" class="active"><strong aria-hidden="true">13.</strong> กลับสู่ชั้นหนังสือ</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -147,7 +147,7 @@
                     <h1 class="menu-title">Mathematics for Computer Graphics</h1>
 
                     <div class="right-buttons">
-                        <a href="../print.html" title="Print this book" aria-label="Print this book">
+                        <a href="print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -177,19 +177,18 @@
                 <div id="content" class="content">
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-<h1 id="transformation"><a class="header" href="#transformation">Transformation</a></h1>
+<script>
+window.location="../bookshelf/";
+</script>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../determinant/intro.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="devided_diff/intro_divide_diff.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../polynomial/intro_polynomial.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -197,13 +196,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../determinant/intro.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="devided_diff/intro_divide_diff.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../polynomial/intro_polynomial.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
             </nav>
 
         </div>
@@ -232,17 +228,17 @@
         </script>
 
 
-        <script src="../elasticlunr.min.js"></script>
-        <script src="../mark.min.js"></script>
-        <script src="../searcher.js"></script>
+        <script src="elasticlunr.min.js"></script>
+        <script src="mark.min.js"></script>
+        <script src="searcher.js"></script>
 
-        <script src="../clipboard.min.js"></script>
-        <script src="../highlight.js"></script>
-        <script src="../book.js"></script>
+        <script src="clipboard.min.js"></script>
+        <script src="highlight.js"></script>
+        <script src="book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="../js/mermaid.min.js"></script>
-        <script src="../js/mermaid-init.js"></script>
+        <script src="js/mermaid.min.js"></script>
+        <script src="js/mermaid-init.js"></script>
 
 
     </div>
